--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,11 +23,12 @@
         android:id="@+id/registrar"
         android:layout_width="255dp"
         android:layout_height="49dp"
-        android:layout_marginTop="520dp"
+        android:layout_marginTop="524dp"
         android:backgroundTint="#257B87"
         android:text="registrar"
         app:icon="@android:drawable/ic_menu_save"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.474"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -35,19 +36,19 @@
         android:id="@+id/ingresar"
         android:layout_width="190dp"
         android:layout_height="50dp"
-        android:layout_marginTop="464dp"
+        android:layout_marginTop="468dp"
         android:backgroundTint="#22928E"
         android:text="ingresar"
         app:icon="@android:drawable/ic_menu_send"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.361"
+        app:layout_constraintHorizontal_bias="0.334"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/reset_password_button"
-        android:layout_width="255dp"
-        android:layout_height="49dp"
+        android:layout_width="282dp"
+        android:layout_height="58dp"
         android:layout_marginTop="576dp"
         android:backgroundTint="#155668"
         android:text="Recupere su contraseña"
@@ -66,7 +67,7 @@
         android:drawableStart="@android:drawable/sym_action_email"
         android:ems="10"
         android:fontFamily="sans-serif-medium"
-        android:hint="email"
+        android:hint="Email"
         android:inputType="textEmailAddress"
         android:singleLine="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -79,15 +80,16 @@
         android:id="@+id/password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="24dp"
         android:drawableStart="@android:drawable/ic_lock_idle_lock"
         android:ems="10"
         android:fontFamily="sans-serif-medium"
-        android:hint="contraseña"
+        android:hint="Contraseña"
         android:inputType="textPassword"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:typeface="sans"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.486"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email" />
 
@@ -102,6 +104,6 @@
         app:layout_constraintHorizontal_bias="0.792"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/compartimiento1" />
+        app:srcCompat="@drawable/escoba" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
