--- a/app/src/main/res/layout/activity_reset_pass.xml
+++ b/app/src/main/res/layout/activity_reset_pass.xml
@@ -8,7 +8,7 @@
     tools:context=".ResetPass">
 
     <Button
-        android:id="@+id/returnHome"
+        android:id="@+id/returnHome1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -36,7 +36,7 @@
         android:layout_marginTop="28dp"
         android:layout_marginEnd="146dp"
         android:fontFamily="sans-serif-black"
-        android:text="Recupere su contraseña"
+        android:text="Recuperar su contraseña"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.375"
