se mejora presentacion de informacion, y se realiza implementacion de sqlite para acceder cuando no se tenga coneccion a internet(ojo ... se debe ingresar la primer vez con internet )....falta verificar porque solo graba el ultimo que accedio,lo ideal seria que hiciera una lista con los usuarios que han accedido en el dispositivo ....falta aun mejora en tiempo restante ...

--- a/app/src/main/res/layout/activity_libros.xml
+++ b/app/src/main/res/layout/activity_libros.xml
@@ -23,6 +23,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="216dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="308dp"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.451"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/regresarinicio"
         android:layout_width="wrap_content"
@@ -33,19 +44,6 @@
         app:icon="@android:drawable/ic_menu_revert"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.089"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/genero"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="312dp"
-        android:ems="10"
-        android:hint="Genero"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.437"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
